Add context variable for ctx-menu element

--- a/index.html
+++ b/index.html
@@ -3363,6 +3363,7 @@ fs:[
       }
 
       /* DOM refs */
+      const ctx = document.getElementById("ctx-menu");
       const loginOverlay = document.getElementById("login-overlay");
       const userListEl = document.getElementById("user-list");
       const newUserInput = document.getElementById("new-user-name");
